# niftyled-plugins

./: ChangeLog  INSTALL  Makefile.am  Makefile.global.am  NEWS  README  README.md  configure.ac  version  version.sh
debian/: README.Debian  README.source  changelog  changelog.in  control.tmpl.in  copyright  niftyled-plugins-dev.dirs  niftyled-plugins-dev.install  niftyled-plugins.dirs  niftyled-plugins.install  niftyled-plugins0.dirs  niftyled-plugins0.install  rules.tmpl.in
example/: NEWS  README  configure.ac
example/src/: Makefile.am  dummy.c
example/tests/: Makefile.am  generic.c
gentoo/dev-libs/niftyled-plugins/: niftyled-plugins-9999.ebuild.in
gentoo/media-gfx/niftyled-plugins/: metadata.xml  niftyled-plugins-9999.ebuild.in
niftylino/: Makefile.am  README  configure.ac
niftylino/src/: Makefile.am  niftylino.c  niftylino.h
niftylino/tests/: Makefile.am
plugins/: Makefile.am
plugins/LDP8806-SPI/: Makefile.am
plugins/LDP8806-SPI/src/: Makefile.am  ldp8806-spi.c  ldp8806-spi.h
plugins/LDP8806-SPI/tests/: Makefile.in
plugins/LPD8806-SPI/: Makefile.am
plugins/LPD8806-SPI/src/: Makefile.am  lpd8806-spi.c  lpd8806-spi.h
plugins/LPD8806-SPI/tests/: Makefile.in
plugins/arduino-max7219_max7221/: Makefile.am
plugins/arduino-max7219_max7221/arduino/: max72xx.pde
plugins/arduino-max7219_max7221/src/: Makefile.am  arduino_max72xx.c  arduino_max72xx.h
plugins/arduino-max7219_max7221/tests/: Makefile.am
plugins/artnet/: Makefile.am
plugins/artnet/src/: Makefile.am  artnet.c
plugins/artnet/tests/: Makefile.am
plugins/example/: Makefile.am
plugins/example/src/: Makefile.am  dummy.c  dummy.h
plugins/example/tests/: Makefile.am  generic.c  send.c
plugins/niftylino/: Makefile.am
plugins/niftylino/src/: Makefile.am  niftylino.c  niftylino.h  niftylino_usb.h
plugins/niftylino/tests/: Makefile.am
plugins/niftylino/udev/: 40-niftylino.rules  Makefile.am
