# libniftyled Makefile.am - v0.3 - Daniel Hiepler <daniel@niftylight.de> 

# AMFLAGS
ACLOCAL_AMFLAGS = -I m4


# flags for all objects
AM_CFLAGS = 
AM_CPPFLAGS =
AM_LIBS = 
AM_LDFLAGS =


# subdirs to build
SUBDIRS = src

# compile tests for "make check"? (configure argument "--disable-tests")
if RUN_TESTS
    SUBDIRS += tests
endif
