# libniftyled Makefile.am - v0.3 - Daniel Hiepler <daniel@niftylight.de> 


tests_CFLAGS_PRIV = -g -O0 $(niftyled_CFLAGS) $(DEBUG_FLAGS)
tests_LDFLAGS_PRIV = 
tests_LDADD_PRIV = $(niftyled_LIBS)


# test-target
#check_PROGRAMS = generic
#TESTS = $(check_PROGRAMS)
#TESTS_ENVIRONMENT = ./tests.env
#EXTRA_DIST = tests.env

#generic_SOURCES = generic.c
#generic_CFLAGS = $(tests_CFLAGS_PRIV)
#generic_LDFLAGS = $(tests_LDFLAGS_PRIV)
#generic_LDADD = $(tests_LDADD_PRIV)
